fixed display results to overflow

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -10,4 +10,5 @@
 .filter-results {
   height: 65vh;
   border: 1px solid black;
+  overflow: scroll;
 }
