--- a/client/src/components/ListItems.css
+++ b/client/src/components/ListItems.css
@@ -2,6 +2,7 @@
   height: 60vh;
   width: 100%;
   border: 3px solid green;
+  overflow: scroll;
 }
 .form-inputs{
   display: flex;
